unpackaged/main/default/objects/Product2/fields/BackInStockEmailEnabled__c.field-meta.xml
<CustomField>
    <fullName>BackInStockEmailEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Back in stock email enabled</label>
    <type>Checkbox</type>
</CustomField>