unpackaged/main/default/objects/Product2/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>110</fullName>
                <label>Collaboration</label>
            </value>
            <value>
                <fullName>113</fullName>
            </value>
            <value>
                <fullName>115</fullName>
            </value>
            <value>
                <fullName>130</fullName>
            </value>
            <value>
                <fullName>140</fullName>
            </value>
            <value>
                <fullName>150</fullName>
            </value>
            <value>
                <fullName>155</fullName>
            </value>
            <value>
                <fullName>160</fullName>
            </value>
            <value>
                <fullName>170</fullName>
            </value>
            <value>
                <fullName>190</fullName>
            </value>
            <value>
                <fullName>199</fullName>
            </value>
            <value>
                <fullName>200</fullName>
                <label>Repairs</label>
            </value>
            <value>
                <fullName>210</fullName>
            </value>
            <value>
                <fullName>370</fullName>
                <label>TROPICANA</label>
            </value>
            <value>
                <fullName>501</fullName>
                <label>Collaboration -</label>
            </value>
            <value>
                <fullName>502</fullName>
                <label>Magazines</label>
            </value>
            <value>
                <fullName>503</fullName>
                <label>Travel Books</label>
            </value>
            <value>
                <fullName>504</fullName>
                <label>Beauty/Cosmetics</label>
            </value>
            <value>
                <fullName>505</fullName>
                <label>Stationary</label>
            </value>
            <value>
                <fullName>506</fullName>
                <label>Tech</label>
            </value>
            <value>
                <fullName>507</fullName>
                <label>Food / Nutrition</label>
            </value>
            <value>
                <fullName>508</fullName>
                <label>Sticker Units</label>
            </value>
            <value>
                <fullName>509</fullName>
                <label>Single Stickers</label>
            </value>
            <value>
                <fullName>510</fullName>
                <label>Handles</label>
            </value>
            <value>
                <fullName>511</fullName>
                <label>Charms</label>
            </value>
            <value>
                <fullName>512</fullName>
                <label>Belts</label>
            </value>
            <value>
                <fullName>513</fullName>
                <label>SLG</label>
            </value>
            <value>
                <fullName>514</fullName>
                <label>Address tag</label>
            </value>
            <value>
                <fullName>515</fullName>
                <label>Wheels</label>
            </value>
            <value>
                <fullName>516</fullName>
                <label>Packaging</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>