unpackaged/main/default/objects/Product2/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <label>Color</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Black Gloss</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>White Gloss</fullName>
            </value>
            <value>
                <fullName>Green Gloss</fullName>
            </value>
            <value>
                <fullName>Blue Gloss</fullName>
            </value>
            <value>
                <fullName>Matte Blue</fullName>
            </value>
            <value>
                <fullName>Titanium</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Transparent</fullName>
            </value>
            <value>
                <fullName>Aquamarine</fullName>
            </value>
            <value>
                <fullName>Red Gloss</fullName>
            </value>
            <value>
                <fullName>Matte Black</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Yachting Blue</fullName>
            </value>
            <value>
                <fullName>Creme White</fullName>
            </value>
            <value>
                <fullName>Golden</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Coral</fullName>
            </value>
            <value>
                <fullName>Prosecco</fullName>
            </value>
            <value>
                <fullName>Black NB</fullName>
            </value>
            <value>
                <fullName>Grey Matte</fullName>
            </value>
            <value>
                <fullName>Olive Green</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Lime Green</fullName>
            </value>
            <value>
                <fullName>Carmona Red</fullName>
            </value>
            <value>
                <fullName>Slate</fullName>
            </value>
            <value>
                <fullName>Titanium Matte</fullName>
            </value>
            <value>
                <fullName>Meteor Grey</fullName>
            </value>
            <value>
                <fullName>Carbon Grey Met.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>