unpackaged/main/default/objects/Product2/fields/color_v3_id__c.field-meta.xml
<CustomField>
    <fullName>color_v3_id__c</fullName>
    <label>Color V3 id</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>