unpackaged/main/default/objects/Product2/fields/ConversionRate__c.field-meta.xml
<CustomField>
    <fullName>ConversionRate__c</fullName>
    <label>Conversion Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>