unpackaged/main/default/objects/Product2/fields/ConversionRate_SFMC__c.field-meta.xml
<CustomField>
    <fullName>ConversionRate_SFMC__c</fullName>
    <formula>NULLVALUE(
ConversionRate__c,  
 $Setup.Default_Conversion_Rate__c.Value__c 
)</formula>
    <label>ConversionRate_SFMC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>