unpackaged/main/default/objects/Product2/fields/COO__c.field-meta.xml
<CustomField>
    <fullName>COO__c</fullName>
    <label>COO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>