unpackaged/main/default/objects/Product2/fields/hsCode__c.field-meta.xml
<CustomField>
    <fullName>hsCode__c</fullName>
    <label>hsCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>