unpackaged/main/default/objects/Product2/fields/hsCodeDescription__c.field-meta.xml
<CustomField>
    <fullName>hsCodeDescription__c</fullName>
    <label>hsCode Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>