unpackaged/main/default/objects/Product2/fields/id_line__c.field-meta.xml
<CustomField>
    <fullName>id_line__c</fullName>
    <label>Line id</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>