unpackaged/main/default/objects/Product2/fields/ImageUrl1__c.field-meta.xml
<CustomField>
    <fullName>ImageUrl1__c</fullName>
    <label>Image Url 1</label>
    <type>Url</type>
</CustomField>