unpackaged/main/default/objects/Product2/fields/ImageUrl2__c.field-meta.xml
<CustomField>
    <fullName>ImageUrl2__c</fullName>
    <label>Image Url 2</label>
    <type>Url</type>
</CustomField>