unpackaged/main/default/objects/Product2/fields/ImageUrl3__c.field-meta.xml
<CustomField>
    <fullName>ImageUrl3__c</fullName>
    <label>Image Url 3</label>
    <type>Url</type>
</CustomField>