unpackaged/main/default/objects/Product2/fields/isSecondHand__c.field-meta.xml
<CustomField>
    <fullName>isSecondHand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Second Hand</label>
    <type>Checkbox</type>
</CustomField>