unpackaged/main/default/objects/Product2/fields/isSerialized__c.field-meta.xml
<CustomField>
    <fullName>isSerialized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Serialized</label>
    <type>Checkbox</type>
</CustomField>