unpackaged/main/default/objects/Product2/fields/macrofunction__c.field-meta.xml
<CustomField>
    <fullName>macrofunction__c</fullName>
    <label>Macrofunction V3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>