unpackaged/main/default/objects/Product2/fields/masterSku__c.field-meta.xml
<CustomField>
    <fullName>masterSku__c</fullName>
    <label>Master SKU</label>
    <length>8</length>
    <type>Text</type>
</CustomField>