unpackaged/main/default/objects/Product2/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <label>Material</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>9</fullName>
                <label>ALUMINIUM</label>
            </value>
            <value>
                <fullName>170</fullName>
                <label>GOODS</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>POLYCARBONATE</label>
            </value>
            <value>
                <fullName>513</fullName>
                <label>SLG</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>