unpackaged/main/default/objects/Product2/fields/material_v3__c.field-meta.xml
<CustomField>
    <fullName>material_v3__c</fullName>
    <label>Material V3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>