unpackaged/main/default/objects/Product2/fields/material_v3_id__c.field-meta.xml
<CustomField>
    <fullName>material_v3_id__c</fullName>
    <label>Material V3 id</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>