unpackaged/main/default/objects/Product2/fields/NbOfWheel__c.field-meta.xml
<CustomField>
    <fullName>NbOfWheel__c</fullName>
    <label>Nb Of Wheel</label>
    <type>TextArea</type>
</CustomField>