unpackaged/main/default/objects/Product2/fields/new_description__c.field-meta.xml
<CustomField>
    <fullName>new_description__c</fullName>
    <label>New description V3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>