unpackaged/main/default/objects/Product2/fields/not_saleable__c.field-meta.xml
<CustomField>
    <fullName>not_saleable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not saleable</label>
    <type>Checkbox</type>
</CustomField>