unpackaged/main/default/objects/Product2/fields/ProductFamilyIcon__c.field-meta.xml
<CustomField>
    <fullName>ProductFamilyIcon__c</fullName>
    <formula>IF (    ISPICKVAL(Family , &#39;Luggages&#39;)  ,  &#39;💼 Luggages &#39; ,&#39;&#39; )
+  IF (  ISPICKVAL(Family , &#39;Accessories&#39;)  ,  &#39;🎴 Accessories &#39; ,&#39;&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Family Icon</label>
    <type>Text</type>
</CustomField>