unpackaged/main/default/objects/Product2/fields/ProductSegment__c.field-meta.xml
<CustomField>
    <fullName>ProductSegment__c</fullName>
    <label>Product Segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>