unpackaged/main/default/objects/Product2/fields/SegmentationCategory__c.field-meta.xml
<CustomField>
    <fullName>SegmentationCategory__c</fullName>
    <label>Segmentation Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>