unpackaged/main/default/objects/Product2/fields/size_id__c.field-meta.xml
<CustomField>
    <fullName>size_id__c</fullName>
    <label>Size V3 id</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>