unpackaged/main/default/objects/Product2/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <externalId>true</externalId>
    <label>SKU</label>
    <length>50</length>
    <type>Text</type>
</CustomField>