unpackaged/main/default/objects/Product2/fields/StockKeepingUnitForReport__c.field-meta.xml
<CustomField>
    <fullName>StockKeepingUnitForReport__c</fullName>
    <formula>StockKeepingUnit</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StockKeepingUnitForReport</label>
    <type>Text</type>
</CustomField>