unpackaged/main/default/objects/Product2/fields/sub_lifecycle__c.field-meta.xml
<CustomField>
    <fullName>sub_lifecycle__c</fullName>
    <label>Sub_lifecycle V3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>