unpackaged/main/default/objects/Product2/fields/sub_lifecycle_id__c.field-meta.xml
<CustomField>
    <fullName>sub_lifecycle_id__c</fullName>
    <label>Sub_lifecycle V3 id</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>