unpackaged/main/default/objects/Product2/fields/subcollection_id__c.field-meta.xml
<CustomField>
    <fullName>subcollection_id__c</fullName>
    <label>Subcollection V3 id</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>