unpackaged/main/default/objects/Product2/fields/warranty__c.field-meta.xml
<CustomField>
    <fullName>warranty__c</fullName>
    <label>Warranty V3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>