unpackaged/main/default/objects/Product2/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight</label>
    <type>TextArea</type>
</CustomField>