unpackaged/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.SKU</columns>
    <columns>Category__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Material__c</columns>
    <columns>SegmentationCategory__c</columns>
    <columns>Color__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Dimension__c</columns>
    <columns>UCRInternalId__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>StockKeepingUnitForReport__c</columns>
    <columns>new_description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>